--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@my-vue3-workspace/source",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": ">=22.12.0",
+    "pnpm": ">=9.0.0"
+  },
   "scripts": {},
   "private": true,
   "dependencies": {
