--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
