--- a/libs/ui/project.json
+++ b/libs/ui/project.json
@@ -1,7 +1,7 @@
 {
   "name": "ui",
-  "$schema": "../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "ui/src",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/ui/src",
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project ui --web",
