feat: update CI configuration, add Button component, and adjust project structure

--- a/apps/demo/project.json
+++ b/apps/demo/project.json
@@ -5,4 +5,5 @@
   "sourceRoot": "apps/demo/src",
   "// targets": "to see all targets run: nx show project demo --web",
   "targets": {}
+  // "implicitDependencies": ["ui"]
 }
